# So3

./: .gitignore  AndroidManifest.xml  BUILD_ANALYSIS.md  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  FINAL_README.md  IMPLEMENTATION_COMPLETE.md  MOD_MENU_README.md  NOROOT_SUMMARY.txt  PROTECTION_SUMMARY.txt  QUICK_START.md  README.md  README_FINAL.md  README_ROOTLESS.md  README_СБОРКА.md  ROOTLESS_SUMMARY.md  STRUCTURE.txt  SUMMARY.txt  classes8.dex  play-services-ads-identifier.properties  resources.arsc  Задача  ИНСТРУКЦИЯ_ПО_СБОРКЕ_НА_КОМПЬЮТЕРЕ.md  ИТОГОВАЯ_ИНСТРУКЦИЯ.md  КРАТКОЕ_РУКОВОДСТВО.md  ОТЧЁТ_ПО_ПРОЕКТУ.md  СТАТУС_СБОРКИ.md  ФАЙЛЫ_НУЖДАЮТСЯ_В_СБОРКЕ.md  ЧТО_СДЕЛАНО.md
.github/workflows/: build.yml
assets/: GameSettings.prop  unity_obb_guid
assets/dexopt/: baseline.prof  baseline.profm
diagnostic_module/: .gitignore  CMakeLists.txt  README.md  example_loader.cpp  main.cpp
diagnostic_module/core/: entity_manager.cpp  entity_manager.hpp  memory.cpp  memory.hpp
diagnostic_module/features/: camera_analyzer.cpp  camera_analyzer.hpp  scene_visualizer.cpp  scene_visualizer.hpp
diagnostic_module/hooks/: input_hooks.hpp  render_hooks.cpp  render_hooks.hpp
diagnostic_module/include/: aim_system.hpp  diag_module.hpp  math_ops.hpp  memory_layout.hpp  renderer.hpp  secure_types.hpp
diagnostic_module/math/: matrix.hpp  vector.hpp
diagnostic_module/renderer/: imgui_overlay.cpp  imgui_overlay.hpp  render_backend.cpp  render_backend.hpp
diagnostic_module/src/: aim_system.cpp  diag_module.cpp  hook_impl.cpp  renderer.cpp
diagnostic_module/utils/: obfuscation.hpp  string_encryption.cpp
mod_menu/: NOROOT_GUIDE.md  PROJECT_OVERVIEW.md  PROTECTION_README.md  QUICKSTART_NOROOT.md  README.md  SECURITY_GUIDE.md  TECHNICAL.md  USAGE.md  build.sh  build_java.sh  build_noroot.sh  build_protected.sh  inject_apk.sh  obfuscate.sh
mod_menu/jni/: Android.mk  Android_noroot.mk  Android_protected.mk  Application.mk  aimbot.h  esp.h  exports.txt  il2cpp_resolver.hpp  jni_bridge.cpp  main.cpp  main_protected.cpp  obfuscation.hpp  protection.hpp
mod_menu_rootless/: BUILD_README.md  CHANGELOG.md  EASY_INSTALL.md  FEATURES.md  FINAL_BUILD_GUIDE.md  FINAL_SUMMARY.txt  INTEGRATION_GUIDE.md  README.md  README_VIS.md  SETUP_GUIDE.md  auto_build_and_inject.sh  build.sh  build_and_inject_all.sh  build_java_only.sh  build_vis.sh  full_build.sh  inject_apk.sh  inject_to_apk.sh  manual_build.sh  quick_build.sh  simple_build.sh
mod_menu_rootless/jni/: Android.mk  aimbot_noroot.hpp  esp_noroot.hpp  main_noroot.cpp  protection_advanced.hpp  protection_noroot.hpp
res/: -1.xml  -5.xml  -7.xml  -8.xml  -9.xml  -A.xml  -D.xml  -J.xml  -R.xml  -T.xml  -m.xml  -y.xml  06.xml  0E.xml  0J.xml  0M.xml  0N.xml  0S.xml  0V.xml  0d.xml  0o.xml  19.xml  1H.xml  1R.xml  1S.xml  1U.xml  1j.xml  1j1.xml  1y.xml  21.xml  28.xml  2F.xml  2G.xml  2K.xml  2R.xml  2W.xml  2a.xml  2i.xml  2j.xml  2n.xml  (+601 more)
res/color/: abc_hint_foreground_material_dark.xml  abc_hint_foreground_material_light.xml  abc_primary_text_disable_only_material_light.xml  abc_primary_text_material_dark.xml  abc_primary_text_material_light.xml  abc_secondary_text_material_dark.xml  abc_secondary_text_material_light.xml  com_facebook_button_text_color.xml  com_facebook_send_button_text_color.xml  design_box_stroke_color.xml  design_error.xml  intercom_chip_background_color.xml  m3_appbar_overlay_color.xml  m3_assist_chip_icon_tint_color.xml  m3_assist_chip_stroke_color.xml  m3_button_background_color_selector.xml  m3_button_outline_color_selector.xml  m3_button_ripple_color.xml  m3_button_ripple_color_selector.xml  m3_calendar_item_disabled_text.xml  m3_calendar_item_stroke_color.xml  m3_card_foreground_color.xml  m3_card_ripple_color.xml  m3_card_stroke_color.xml  m3_checkbox_button_icon_tint.xml  m3_checkbox_button_tint.xml  m3_chip_assist_text_color.xml  m3_chip_background_color.xml  m3_chip_ripple_color.xml  m3_chip_stroke_color.xml  m3_chip_text_color.xml  m3_dark_default_color_primary_text.xml  m3_dark_default_color_secondary_text.xml  m3_dark_highlighted_text.xml  (+132 more)
res/color-night-v8/: material_timepicker_button_stroke.xml  material_timepicker_clockface.xml  material_timepicker_modebutton_tint.xml
res/color-v23/: abc_btn_colored_borderless_text_material.xml  abc_color_highlight_material.xml  abc_tint_btn_checkable.xml  abc_tint_default.xml  abc_tint_seek_thumb.xml  abc_tint_spinner.xml  abc_tint_switch_track.xml
res/color-v31/: m3_dynamic_dark_default_color_primary_text.xml  m3_dynamic_dark_default_color_secondary_text.xml  m3_dynamic_dark_highlighted_text.xml  m3_dynamic_dark_hint_foreground.xml  m3_dynamic_dark_primary_text_disable_only.xml  m3_dynamic_default_color_primary_text.xml  m3_dynamic_default_color_secondary_text.xml  m3_dynamic_highlighted_text.xml  m3_dynamic_hint_foreground.xml  m3_dynamic_primary_text_disable_only.xml
Дамп/: Тутдамп.txt
(+11 files in other folders)
